Probably fixed background on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-    background: linear-gradient(to bottom right, rgb(0, 28, 88), rgb(10, 142, 160)) fixed;
+    background: linear-gradient(to bottom right, rgb(0, 28, 88), rgb(10, 142, 160)) fixed no-repeat;
     font-size: 1rem;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -19,7 +19,7 @@ body#home {
 }
 
 body#about {
-  background: linear-gradient(to bottom right, rgb(88, 0, 44), rgb(0, 40, 126)) fixed;
+  background: linear-gradient(to bottom right, rgb(88, 0, 44), rgb(0, 40, 126)) fixed no-repeat;
   display: flex;
   flex-direction: column;
   align-items: unset
@@ -189,4 +189,8 @@ label a {
 @media screen and (max-width: 1200px){
   body{font-size: 0.8rem}
   #origami{height: 170px}
+}
+
+@media screen and (max-width: 450px){
+  .ml11{font-size: 2.5em;}
 }
